<resources>

    <!-- General-->
    <string name="app_name">RickAndMorty</string>
    <string name="login_title">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="locations_tilte">Locations</string>
    <string name="Episodes_title">Episodes</string>
    <string name="save_title">Saved</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="Information_title">Information</string>
    <string name="Information_yes">yes</string>
    <string name="Information_no">No</string>
    <string name="information_quit_app">Do you want to exit the application?</string>
    <string name="text_retry"><u>Try again</u></string>

    <string name="Information"><b>This app is developed with libraries, technologies and tools: </b> \n \n
        -Android Studio \n
        -Kotlin \n
        -MVVM \n
        -Navigation component \n
        -Retrofit and interceptors \n
        -Dagger hilt \n
        -Coil \n
        -Room \n
        -Paging \n
        -Coroutines \n
        -View Binding \n
        -Push notifications \n
        -Github \n\n
  </string>

    <!-- Character Fragment -->
    <string name="no_name">No name</string>
    <string name="characters_saved">Characters saved</string>
    <string name="characters_na">N/A</string>

    <!-- Character Detail Fragment -->
    <string name="detail_title">Details</string>
    <string name="detail_name">Name</string>
    <string name="detail_status">Status</string>
    <string name="detail_specie">Specie</string>
    <string name="detail_type">Type</string>
    <string name="detail_gender">Gender</string>
    <string name="detail_general_info">General information</string>
    <string name="detail_character_saved">Character saved</string>
    <string name="detail_error_save_character">Error saving character</string>
    <string name="detail_character_eliminated">Character eliminated</string>
    <string name="detail_error_eliminate_character">Error to eliminate character</string>
    <string name="detail_origin">Origin</string>
    <string name="detail_dimension">Dimension</string>
    <string name="detail_first_see_in">First see in</string>
    <string name="detail_air_date">Air date</string>
    <string name="detail_episode">Episode</string>

    <!-- Character Saved fragment-->
    <string name="format_character_delete">Remove %s character from the list?</string>
    <string name="saved_search">Search</string>
    <string name="saved_title">Saved</string>

    <!-- Character Locations-->
    <string name="format_location_name">Name: %s</string>
    <string name="format_location_type">Type: %s</string>
    <string name="format_location_dimension">Dimension: %s</string>

    <!-- Character Episodes-->
    <string name="format_episode_air_date">Air date: %s</string>
    <string name="format_episode">Episode: %s</string>

    <!-- Character Login-->
    <string name="text_button_gmail">Gmail</string>
    <string name="text_button_facebook">Facebook</string>
    <string name="data_provided">Data provided by The Rick and Morty API </string>
    <string name="text_login_with">Login with</string>

    <!-- Character profile-->
    <string name="text_profile_title">Profile</string>
    <string name="text_information_title">This is your information!</string>
    <string name="text_last_name_title">Last name</string>
    <string name="text_email_title">Email</string>
    <string name="text_profile_type_signing">You logged with:</string>
    <string name="format_last_name">Last name: %s</string>
    <string name="format_email">Email: %s</string>
    <string name="text_exit_app"><u>Sign out</u></string>
</resources>