<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/characterFragment">

    <fragment
        android:id="@+id/characterFragment"
        android:name="com.characters.rickandmorty.ui.character.CharacterFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_character">
        <action
            android:id="@+id/action_characterFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_left"
            app:popExitAnim="@anim/slide_to_rigth" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.characters.rickandmorty.ui.characterdetails.CharacterDetailsFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_character_details">
        <argument
            android:name="Character"
            app:argType="com.characters.rickandmorty.data.model.Character"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/characterEpisodesFragment"
        android:name="com.characters.rickandmorty.ui.characterepisodes.CharacterEpisodesFragment"
        android:label="@string/Episodes_title"
        tools:layout="@layout/fragment_character_episodes" />
    <fragment
        android:id="@+id/characterLocationsFragment"
        android:name="com.characters.rickandmorty.ui.characterlocations.CharacterLocationsFragment"
        android:label="@string/locations_tilte"
        tools:layout="@layout/fragment_character_locations" />
    <fragment
        android:id="@+id/characterSavedFragment"
        android:name="com.characters.rickandmorty.ui.charactersaved.CharacterSavedFragment"
        android:label="@string/saved_title"
        tools:layout="@layout/fragment_character_saved" />
</navigation>