<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="6dp"
    app:cardCornerRadius="12dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/view"
            android:layout_width="12dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@color/blue">
        </ImageView>

        <LinearLayout
            app:layout_constraintStart_toEndOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtOriginName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/txtOriginType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_type"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/txtOriginDimension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_dimension"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>